# miledger

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  SERVER_DOCS.md  base.qrc  conanfile.py  conanfile.txt  dockerpack.yml  ic.sh  instruction.html  main.cpp  resources.rc  style_linux.qss  style_osx.qss  style_win.qss
.github/workflows/: main.yml
cfg/: Info.plist  desktop.ini  linux_deploy_qt.sh  linux_deploy_qt_nofuse.sh  miledger-config.in.h  package_make.sh  package_upload.sh  qt.in.conf  setup.sh  version.in.h
include/: app.h  coin_model.h  console_app.h  consolewindow.h  device_looper.h  device_server.h  errors.h  exchange_calculator.h  exchange_forms.h  image_cache.h  input_fields.hpp  input_group.h  main_app.h  mainwindow.h  miledger-config.h  optional.hpp  rxqt_instance.hpp  settings.h  style_helper.h  tab_base.h  tab_exchange.h  tab_send.h  testwindow.h  txsenddialog.h  utils.h  validators.hpp
include/api/: ws_messages.h  ws_server.h
include/net/: explorer_repo.h  gate_repo.h  io_container.h  repository.h  request.h
include/ui/: ProgressSpinning.h  consolewindow.h  installappwindow.h  mainwindow.h  serversettingsdialog.h
install/ledger/: install.bat  install.src.bat  install.src.sh  loader.py  loader.spec  make_dist.sh
modules/: CleanDirectoryList.cmake  ConanBuild.cmake  ConanInit.cmake  FindLibUsb.cmake  FindWinHID.cmake  FindWindowsSDK.cmake  PrefixListGlob.cmake  compilers_flags.cmake  install.cmake  material_widgets.cmake  penv_generator.cmake
resources/: apple.icns
src/: app.cpp  console_app.cpp  consolewindow.cpp  device_looper.cpp  device_server.cpp  exchange_forms.cpp  explorer_repo.cpp  gate_repo.cpp  installappwindow.cpp  io_container.cpp  main_app.cpp  mainwindow.cpp  request.cpp  settings.cpp  tab_exchange.cpp  tab_send.cpp  testwindow.cpp  txsenddialog.cpp  utils.cpp  validators.cpp
src/api/: ws_messages.cpp  ws_server.cpp
src/dev/: ledger_device_server.cpp  ledger_device_server.h  mnemonic_device_server.cpp  mnemonic_device_server.h
src/ui/: ProgressSpinning  consolewindow.cpp  installappwindow.cpp  mainwindow.cpp  serversettingsdialog.cpp  testwindow.cpp  txsenddialog.cpp
ui/: consolewindow.ui  installappwindow.ui  mainwindow.ui  serversettingsdialog.ui  testwindow.ui  txsenddialog.ui
